almost (final left)

--- a/report/main.Rmd
+++ b/report/main.Rmd
@@ -207,6 +207,75 @@ $L_0 \leftarrow \frac{W_0}{\sqrt{P_{\text{upper}}^{(0)}} - \sqrt{P_{\text{lower}
 \end{small}
 ```
 
+## Попытки улучшений 
+
+- Динамический интервал ребалансировки ($\tau$)
+
+Вместо фиксированного $\tau$, использовался динамический, зависящий от текущей
+волатильности. При повышенной волатильности стратегия снижает частоту
+ребалансировок, уменьшая издержки на комиссии.
+
+$$
+\tau_{\text{dynamic}} = \frac{\tau}{1 + \alpha \cdot \frac{\sigma_{\text{short}}}{\bar{\sigma}}}
+$$
+
+где $\sigma_{\text{short}}$ -- краткосрочная волатильность, $\bar{\sigma}$ --
+EMA-долгосрочная.
+
+- Velocity-адаптация
+
+Введён показатель *velocity* -- относительное изменение цены на последнем шаге.
+Он позволил реагировать на быструю динамику рынка:
+
+$$
+\text{velocity} = \frac{P_t}{P_{t-1}} - 1
+$$
+
+Этот фактор использовался при расчёте диапазона $\delta_t$ вместе с
+логарифмически нормализованными метриками объема и волатильности:
+
+$$
+\delta_t = \delta_0 \cdot \left(1 + w_v \cdot \log(1 + R_v) + w_\sigma \cdot \log(1 + R_\sigma) + w_{\text{vel}} \cdot \text{velocity} \right)
+$$
+
+- Тренд-фильтрация и сдвиг диапазона
+
+Использовался тренд-фильтр, основанный на z-отклонении текущей цены от
+скользящего среднего, для сдвига диапазона ликвидности в сторону преобладающего
+направления:
+
+$$
+\text{skew} = 0.5 + \beta \cdot \text{trend}
+$$
+
+где $\text{trend} = \frac{P_t - \text{MA}(P)}{P_t}$. При восходящем тренде
+диапазон смещался вверх, концентрируя ликвидность ближе к вероятной будущей
+цене.
+
+- Confidence-driven доля ликвидности
+
+Была введена метрика *confidence* -- на основе объема, волатильности и
+velocity, пропущенных через сигмоиду. Она управляла долей капитала, пущенного в
+ликвидность:
+
+$$
+\text{confidence} = \sigma(\log(R_v) + \log(R_\sigma) + \text{velocity})
+$$
+
+$$
+\text{LP fraction} = 0.1 + 0.4 \cdot \text{confidence}
+$$
+
+
+Также были протестированы:
+
+- Momentum-фильтр (блокировка при сильных рывках цены)
+
+- Отклонение от скользящей средней (фильтрация аномальных движений)
+
+Да, они показали в среднем улучшение стабильности модели, но сами по себе
+принесли только "убыток" в метриках.
+
 \newpage
 
 # References
