--- a/report/main.Rmd
+++ b/report/main.Rmd
@@ -32,6 +32,27 @@ header-includes:
 - \definecolor{lightgreen}{rgb}{0.8,1,0.8}
 ---
 
+\begin{framed}
+\center{\href{https://github.com/markviner/taustra}{Project}}
+
+\center{Гординский Д.М.}
+\end{framed}
+
+# Введение
+
+Была поставлена задача разработать и протестировать стратегии управления
+ликвидностью на платформе Uniswap V3 с элементами адаптации под рыночные
+условия. В работе были исследованы подходы на основе классической $\tau$-reset
+стратегии, модифицированной с учётом торговой активности и ценовой динамики.
+
+Были разработаны и протестированы две стратегии: одна учитывает только торговый
+объём (*Volume-Adjusted $\tau$-reset*), вторая -- дополнительно адаптирует
+диапазон по волатильности и скорости изменения цены
+(*Volume-Volatility-Velocity $\tau$-reset*). 
+
+Обе стратегии были протестированы на исторических данных и сопоставлены с
+базовой реализацией из библиотеки fractal-defi. 
+
 # Volume-Adjusted τ-Reset Liquidity Strategy
 
 Данная стратегия является модификацией классической  $\tau$-reset стратегии
@@ -275,6 +296,51 @@ $$
 
 Да, они показали в среднем улучшение стабильности модели, но сами по себе
 принесли только "убыток" в метриках.
+
+# Графики
+
+\begin{figure}[ht]
+  \centering
+  \begin{subfigure}{0.45\textwidth}
+    \centering
+    \includegraphics[width=\linewidth]{../img/base_volume.png}
+    \caption{Volume-Adjusted}
+    \label{fig:sub1}
+  \end{subfigure}
+  \hfill
+  \begin{subfigure}{0.45\textwidth}
+    \centering
+    \includegraphics[width=\linewidth]{../img/base_volume_volat.png}
+    \caption{Volume-Volatility Adjusted}
+    \label{fig:sub2}
+  \end{subfigure}
+  \caption{Метрики стратегий}
+  \label{fig:main}
+\end{figure}
+
+# Вывод
+
+Обе стратегии демонстрировали адаптивную реакцию на рыночную активность,
+перераспределяя ликвидность в зависимости от объема торгов и волатильности
+цены. Однако, как показал бэктест на реальных данных за годовой период,
+усложнение модели не всегда приводит к улучшению результатов.
+
+Volume-Adjusted стратегия, основанная только на объеме, показала
+наилучший баланс между стабильностью и интерпретируемостью. Она уступает в
+абсолютной доходности, но имеет меньшие просадки и наилучший Sharpe среди
+протестированных моделей.
+
+С другой стороны, Volume-Volatility-Velocity стратегия, хотя и включает более
+сложную адаптацию (velocity-фильтры, confidence-метрики, динамический $\tau$),
+не показала устойчивого превосходства по ключевым метрикам.  Вероятно,
+чрезмерная чувствительность к шуму и высокая частота ребалансировки в условиях
+нестабильного рынка привели к излишним комиссиям и ухудшению итогового баланса.
+
+| Стратегия                              | PnL (%) | Sharpe  | Max Drawdown (%) |
+| -------------------------------------- | ------- | ------- | ---------------- |
+| **Base $\tau$-reset (fractal)**             | -6.99   | -1.33   | 17.39            |
+| **Volume-Adjusted $\tau$-reset**            | -1.46   | -0.20   | 1.64             |
+| **Volume-Volatility-Velocity $\tau$-reset** | \~-1.8  | \~-0.30 | \~2.1            |
 
 \newpage
 
