--- a/notebooks/all_strats.ipynb
+++ b/notebooks/all_strats.ipynb
@@ -747,7 +747,7 @@
     "df_v['drawdown'] = df_v['balance'] / df_v['peak'] - 1\n",
     "\n",
     "df_v['returns'] = df_v['balance'].pct_change()\n",
-    "df_v['rolling_vol'] = df_v['returns'].rolling(window=24).std() * (24**0.5)  # 24-часовое окно\n",
+    "df_v['rolling_vol'] = df_v['returns'].rolling(window=24).std() * (24**0.5)\n",
     "\n",
     "fig, axs = plt.subplots(3, 1, figsize=(14, 10), sharex=True)\n",
     "\n",
